--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -66,10 +66,9 @@
     <bool>false</bool>
    </attribute>
    <addaction name="changeScene"/>
-   <addaction name="actionwireframe"/>
    <addaction name="actiondoor"/>
-   <addaction name="actionRespawn"/>
    <addaction name="actiontoggleFaceCulling"/>
+   <addaction name="actionwireframe"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="changeScene">
@@ -77,7 +76,7 @@
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Change Scene</string>
+    <string>Reset</string>
    </property>
    <property name="font">
     <font>
@@ -95,8 +94,8 @@
    </property>
    <property name="font">
     <font>
-     <family>X-Files</family>
-     <pointsize>12</pointsize>
+     <family>MS Shell Dlg 2</family>
+     <pointsize>8</pointsize>
      <weight>50</weight>
      <bold>false</bold>
     </font>
@@ -110,7 +109,7 @@
   </action>
   <action name="actiondoor">
    <property name="text">
-    <string>Toggle door</string>
+    <string>Simulate</string>
    </property>
    <property name="font">
     <font>
@@ -120,11 +119,6 @@
    </property>
    <property name="autoRepeat">
     <bool>true</bool>
-   </property>
-  </action>
-  <action name="actionRespawn">
-   <property name="text">
-    <string>Respawn</string>
    </property>
   </action>
   <action name="actiontoggleFaceCulling">
